Create swagger for favourites
