# api/openapi.yaml
@@ -74,6 +74,11 @@ paths:
     $ref: "v1/paths/organizations/portfolio/_id.yaml"
   /v1/organizations/{organizationID}/portfolio:
     $ref: "v1/paths/organizations/portfolio/_index.yaml"
+
+  /v1/organizations/{organizationID}/favourites:
+    $ref: "v1/paths/organizations/favourites/_index.yaml"
+  /v1/organizations/favourites/{favouriteID}:
+    $ref: "v1/paths/organizations/favourites/_id.yaml"
   
   /v1/organizations/verifications:
     $ref: "v1/paths/organizations/verifications.yaml"
